# cheesemonger

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  docker-publish.yml  publish-cheesypy.yml
cheesemonger/: __main__.py  benchmark.py  config.py  db.py  main.py  query.py  schema.py  simulate.py  startup.py
cheesemonger/api/: blocks.py  datasets.py  deps.py  gene_mappings.py  health.py  query.py
cheesemonger/crud/: dataset.py
cheesemonger/models/: __init__.py  base.py  dataset.py
cheesemonger/schemas/: common.py  dataset.py  gene_mappings.py  query.py
cheesemonger/services/: dataset.py  gene_mappings.py  loader.py  query.py
clients/cheesypy/: README.md  pyproject.toml
clients/cheesypy/cheesypy/: __init__.py  client.py  exceptions.py  reshape.py
clients/cheesypy/examples/: tutorial.ipynb
clients/cheesypy/tests/: test_client.py  test_reshape.py
docs/: api_design.md  api_design_draft.md  architecture_diagram.md  data_model.md  data_storage_design.md  deployment.md  planning.md
scripts/: bulk_load.sh  load_cheese  run_benchmark.sh
tests/: conftest.py  test_gene_mappings.py  test_loader.py
tests/api/: test_blocks.py  test_datasets.py  test_health.py  test_query.py
