[project]
name = "cheesemonger"
version = "0.1.0"
description = "Low-latency REST API for multi-dimensional perturb-seq data"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "pydantic",
    "pydantic-settings",
    "uvicorn",
    "gunicorn",
    "zarr",
    "numpy",
    "xarray",
    "taigapy==6.2.0",
    "eval_type_backport; python_version < '3.10'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest",
    "httpx",
    "pyright",
]

[[tool.uv.index]]
name = "public-python"
url = "https://us-central1-python.pkg.dev/cds-artifacts/public-python/simple/"
explicit = true

[tool.uv.sources]
taigapy = { index = "public-python" }
