[project]
name = "cheesemonger"
version = "0.1.0"
description = "Low-latency REST API for multi-dimensional perturb-seq data"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "pydantic",
    "pydantic-settings",
    "uvicorn",
    "gunicorn",
    # Pinned to match the zarr version used to write the delivered stores:
    # xarray.Dataset.to_zarr() with zarr-python 3.1.1 produces the Zarr v3
    # format, so the server needs a v3-capable reader. Keep this in sync with
    # the data pipeline's zarr version.
    "zarr==3.1.1",
    "numpy",
    "xarray",
    "taigapy==6.2.0",
    # gcsfs lets xarray/zarr read gs:// URLs (the CLI data loader). Pulls in
    # fsspec + google-auth; GCS access uses Application Default Credentials.
    "gcsfs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest",
    "httpx",
    "pyright",
    "ruff",
]

[tool.pytest.ini_options]
# Silence known third-party warnings so real ones stay visible. These are not
# bugs in our code:
#  - Starlette's TestClient deprecating httpx — upstream; revisit when a stable
#    httpx2 / newer TestClient exists.
#  - Zarr v3 has no finalized spec for fixed-length string dtypes or for
#    consolidated metadata. The delivered stores are v3 (pinned zarr==3.1.1),
#    so these are expected whenever tests write coord labels via to_zarr();
#    not a pending decision.
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
    "ignore:The data type.*does not have a Zarr V3 specification",
    "ignore:Consolidated metadata is currently not part",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: import sorting, B: bugbear (likely bugs),
# UP: pyupgrade (modern syntax). Keeps the baseline clean and catches the
# unused-import / bare-raise / ambiguous-name issues found in review.
select = ["E", "F", "W", "I", "B", "UP"]

[[tool.uv.index]]
name = "public-python"
url = "https://us-central1-python.pkg.dev/cds-artifacts/public-python/simple/"
explicit = true

[tool.uv.sources]
taigapy = { index = "public-python" }
